--- a/grade-calculator/pom.xml
+++ b/grade-calculator/pom.xml
@@ -33,6 +33,29 @@
               <artifactId>maven-surefire-plugin</artifactId>
               <version>3.0.0</version>
           </plugin>
+          	<!-- JaCoCo plugin para cobertura -->
+			<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<version>0.8.11</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>prepare-agent</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>report</id>
+						<phase>test</phase>
+						<goals>
+							<goal>report</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<outputDirectory>${project.build.directory}/site/jacoco</outputDirectory>
+				</configuration>
+			</plugin>
       </plugins>
   </build>
 </project>
